--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@react-navigation/native": "^6.1.6",
+    "@react-navigation/native-stack": "^6.9.12",
     "react": "17.0.*",
     "react-dom": "17.0.*",
+    "react-native-safe-area-context": "^4.5.0",
+    "react-native-screens": "^3.20.0",
     "react-native-web": "0.18.*",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^5.0.1"
   },
-  "devDependencies": {},
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
