--- a/package.json
+++ b/package.json
@@ -5,20 +5,25 @@
   "keywords": [],
   "main": "src/index.js",
   "dependencies": {
+    "@babel/core": "^7.21.0",
+    "@babel/preset-env": "^7.20.2",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
     "react": "17.0.*",
     "react-dom": "17.0.*",
+    "react-native-image-picker": "^5.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
-    "react-native-web": "0.18.*",
-    "react-scripts": "^5.0.1"
+    "react-native-web": "^0.18.12",
+    "react-scripts": "^2.1.3"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "web": "webpack serve -d source-map --mode development --config \"./web/webpack.config.js\" --color --hot",
+    "build:web": "webpack --mode production --config \"./web/webpack.config.js\" --hot"
   },
   "browserslist": {
     "production": [
@@ -31,5 +36,16 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "babel-loader": "8.0.4",
+    "babel-plugin-module-resolver": "^5.0.0",
+    "babel-plugin-react-native-web": "^0.18.12",
+    "html-webpack-plugin": "^5.5.0",
+    "metro-react-native-babel-preset": "^0.76.0",
+    "url-loader": "^4.1.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1",
+    "webpack-dev-server": "^4.11.1"
   }
 }
