--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "react-native-image-picker": "^5.1.0",
     "react-native-safe-area-context": "^4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-vector-icons": "^9.2.0",
     "react-native-web": "^0.18.12",
     "react-scripts": "^2.1.3"
   },
