--- a/package.json
+++ b/package.json
@@ -10,6 +10,11 @@
     "@react-native-async-storage/async-storage": "^1.17.12",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/native-stack": "^6.9.12",
+    "axios": "^1.3.4",
+    "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
+    "express": "^4.18.2",
+    "mysql": "^2.18.1",
     "react": "17.0.*",
     "react-dom": "17.0.*",
     "react-native-image-picker": "^5.1.0",
