--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "mysql": "^2.18.1",
     "react": "17.0.*",
     "react-dom": "17.0.*",
+    "react-native": "^0.66.4",
+    "react-native-dropdown-select-list": "^2.0.4",
     "react-native-image-picker": "^5.1.0",
     "react-native-multiple-select": "^0.5.12",
     "react-native-safe-area-context": "^4.5.0",
